Make tests run (on Windows)